--- a/css/main.css
+++ b/css/main.css
@@ -616,3 +616,145 @@ a {
   border-radius: 10px;
   padding-top: 16px;
 }
+.why_we {
+  width: 100%;
+  min-width: 980px;
+  padding-top: 60px;
+  padding-bottom: 90px;
+}
+.why_we h2 {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 36px;
+  font-family: 'OpenSans-Bold';
+  line-height: 45px;
+}
+.why_we .why_we-container {
+  margin-top: 85px;
+}
+.why_we .why_we-desc {
+  float: left;
+  width: 250px;
+  text-align: center;
+}
+.why_we .why_we-desc header {
+  text-transform: uppercase;
+  font-size: 24px;
+  font-family: 'OpenSans-Bold';
+}
+.why_we .why_we-desc p {
+  margin-top: 22px;
+  font-size: 14px;
+  font-family: 'OpenSans-Regular';
+  text-align: justify;
+  line-height: 16px;
+}
+.why_we .left-block {
+  width: 50%;
+  float: left;
+  border-right: 1px solid #138dcc;
+}
+.why_we .left-block .why_we-block {
+  margin-bottom: 90px;
+  position: relative;
+}
+.why_we .left-block .why_we-block:last-child {
+  margin-bottom: 0;
+}
+.why_we .left-block .why_we-bg:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 97px;
+  height: 8px;
+  background: url(../images/tochka.png);
+  right: -90px;
+  top: 65px;
+}
+.why_we .why_we-bg {
+  float: left;
+  width: 124px;
+  height: 138px;
+  background: url(../images/why-bg.png);
+  text-align: center;
+  margin-left: 20px;
+  position: relative;
+}
+.why_we .why_we-bg .table-block {
+  width: 124px;
+  height: 138px;
+  display: table-cell;
+  vertical-align: middle;
+}
+.why_we .right-block {
+  float: left;
+  width: 50%;
+  padding-top: 110px;
+  padding-left: 85px;
+}
+.why_we .right-block .why_we-bg {
+  margin-left: 0;
+  margin-right: 20px;
+}
+.why_we .right-block .why_we-block {
+  margin-bottom: 78px;
+}
+.why_we .right-block .why_we-bg:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 97px;
+  height: 8px;
+  background: url(../images/tochka-l.png);
+  left: -90px;
+  top: 63px;
+}
+.warranty {
+  width: 100%;
+  min-width: 980px;
+  padding-top: 45px;
+  background: url(../images/warranty.png);
+}
+.warranty h2 {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 48px;
+  font-family: 'OpenSans-Bold';
+}
+.warranty .war-img {
+  width: 488px;
+  height: 326px;
+  float: left;
+}
+.warranty .war-container {
+  margin-top: 60px;
+}
+.warranty .war-desc {
+  float: left;
+  width: 470px;
+  padding-left: 35px;
+}
+.warranty .war-desc header {
+  color: #151515;
+  font-size: 36px;
+  font-family: 'OpenSans-Bold';
+  margin-bottom: 42px;
+}
+.warranty .war-desc p {
+  color: #151515;
+  font-size: 20px;
+  font-family: 'OpenSans-Regular';
+  line-height: 26px;
+}
+.warranty .war-desc .link-btn {
+  width: 330px;
+  height: 60px;
+  color: #141414;
+  font-size: 24px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  border-bottom: 4px solid #afa904;
+  padding-top: 16px;
+  margin-top: 30px;
+}
