--- a/css/main.less
+++ b/css/main.less
@@ -315,7 +315,7 @@ a{
 			height: 281px;
 			position: relative;
 			z-index: 3;
-			
+
 				
 
 		}
@@ -618,6 +618,10 @@ a{
 					display: table-cell;
 					vertical-align: middle;
 				}
+		}
+		.work-table.active{
+			  background-color: #fef507;
+  			  border: 4px solid black;
 		}
 		.work-title{
 			text-align: center;
