--- a/css/main.css
+++ b/css/main.css
@@ -836,3 +836,209 @@ a {
   z-index: 11;
   top: -60px;
 }
+.form-mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.85);
+  z-index: 101;
+}
+.modal {
+  background-color: #138dcc;
+  position: fixed;
+  top: 20px;
+  z-index: 102;
+}
+.get-price {
+  padding: 40px 30px 5px 30px;
+  width: 850px;
+  left: 50%;
+  margin-left: -425px;
+  top: 50%;
+  margin-top: -262.5px;
+  display: none;
+}
+.get-price .right-block {
+  float: right;
+  width: 455px;
+  background-color: white;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  padding-top: 20px;
+}
+.get-price .left-block {
+  float: left;
+}
+.get-price .pen {
+  width: 272px;
+  height: 480px;
+  background: url(../images/pen.png);
+}
+.get-price .main-form {
+  width: 400px;
+  margin: auto;
+}
+.get-price .main-form h3 {
+  text-align: center;
+  text-transform: uppercase;
+  color: black;
+  font-size: 24px;
+  font-family: 'OpenSans-Regular';
+  margin-bottom: 20px;
+}
+.get-price .main-form .input-block {
+  margin-bottom: 10px;
+}
+.get-price .main-form .input-block p {
+  font-size: 14px;
+  font-family: 'OpenSans-Regular';
+}
+.get-price .main-form .input-block input[type="text"] {
+  width: 100%;
+  height: 40px;
+  outline: 0;
+  border: 1px solid #bebebe;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  font-size: 24px;
+  font-family: 'OpenSans-Semibold';
+  text-align: center;
+  margin-top: 5px;
+}
+.get-price .main-form .input-block .link-btn {
+  outline: 0;
+  border: 0;
+  border-bottom: 4px solid #afa904;
+  width: 100%;
+  height: 62px;
+  cursor: pointer;
+  font-size: 24px;
+  -webki-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  margin-top: 15px;
+}
+.get-price .main-form .privacy {
+  color: #757575;
+  font-size: 12px;
+  font-family: 'OpenSans-Regular';
+  padding-left: 40px;
+  padding-top: 5px;
+  padding-bottom: 15px;
+  background: url(../images/lock.png) no-repeat;
+  background-position: 15px 0;
+}
+.closed {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  background: url(../images/closed.png);
+  right: 7px;
+  top: 5px;
+  cursor: pointer;
+}
+.get-call {
+  padding: 40px 30px 30px 30px;
+  width: 850px;
+  left: 50%;
+  margin-left: -425px;
+  top: 50%;
+  margin-top: -262.5px;
+}
+.get-call .right-block {
+  float: right;
+  width: 455px;
+  background-color: white;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  padding-top: 20px;
+}
+.get-call .left-block {
+  float: left;
+}
+.get-call .iphone {
+  width: 202px;
+  height: 465px;
+  background: url(../images/iphone.png);
+  position: relative;
+  top: -20px;
+  left: 50px;
+}
+.get-call .main-form {
+  width: 400px;
+  margin: auto;
+}
+.get-call .main-form h3 {
+  text-align: center;
+  text-transform: uppercase;
+  color: black;
+  font-size: 24px;
+  font-family: 'OpenSans-Regular';
+  margin-bottom: 20px;
+  line-height: 32px;
+}
+.get-call .main-form input[type="text"] {
+  width: 100%;
+  height: 55px;
+  outline: 0;
+  border: 1px solid #bebebe;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  font-size: 24px;
+  font-family: 'OpenSans-Semibold';
+  text-align: center;
+  margin-top: 5px;
+}
+.get-call .main-form p {
+  font-size: 14px;
+  font-family: 'OpenSans-Regular';
+}
+.get-call .main-form .link-btn {
+  outline: 0;
+  border: 0;
+  border-bottom: 4px solid #afa904;
+  width: 100%;
+  height: 62px;
+  cursor: pointer;
+  font-size: 24px;
+  -webki-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  margin-top: 15px;
+}
+.get-call .main-form .privacy {
+  color: #757575;
+  font-size: 12px;
+  font-family: 'OpenSans-Regular';
+  padding-left: 40px;
+  padding-top: 5px;
+  padding-bottom: 15px;
+  background: url(../images/lock.png) no-repeat;
+  background-position: 15px 0;
+}
+.get-call .main-form .input-block {
+  margin-bottom: 15px;
+}
+.get-call .main-form .tel-block input:nth-child(2) {
+  width: 80px;
+  float: left;
+}
+.get-call .main-form .tel-block input:nth-child(3) {
+  width: 125px;
+  float: left;
+  margin-left: 5px;
+}
+.get-call .main-form .tel-block input:nth-child(4) {
+  width: 185px;
+  float: left;
+  margin-left: 5px;
+}
+.get-call .main-form .tel-block {
+  margin-bottom: 25px;
+}
