add other files

--- a/css/main.css
+++ b/css/main.css
@@ -107,11 +107,12 @@ a {
   font-family: 'OpenSans-Bold';
   float: right;
 }
-.top-block .right-block .get-call {
+.top-block .right-block .get-call-link {
   width: 245px;
   height: 45px;
   padding-top: 12px;
   margin-top: 5px;
+  cursor: pointer;
 }
 .slider-desc {
   position: absolute;
@@ -221,10 +222,12 @@ a {
 }
 .order .right-block .input-block {
   margin-bottom: 10px;
+  position: relative;
 }
 .order .right-block .input-block p {
   font-size: 14px;
   font-family: 'OpenSans-Regular';
+  float: left;
 }
 .order .right-block .input-block input[type="text"] {
   width: 100%;
@@ -234,7 +237,7 @@ a {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  font-size: 24px;
+  font-size: 28px;
   font-family: 'OpenSans-Semibold';
   text-align: center;
   margin-top: 5px;
@@ -632,6 +635,7 @@ a {
   text-transform: uppercase;
   font-size: 24px;
   font-family: 'OpenSans-Bold';
+  padding-top: 15px;
 }
 .why_we .why_we-desc p {
   margin-top: 22px;
@@ -822,11 +826,12 @@ a {
   font-family: 'OpenSans-Bold';
   float: right;
 }
-.bottom-block .right-block .get-call {
+.bottom-block .right-block .get-call-link {
   width: 245px;
   height: 45px;
   padding-top: 12px;
   margin-top: 5px;
+  cursor: pointer;
 }
 .bottom-block .logo {
   position: absolute;
@@ -844,12 +849,14 @@ a {
   height: 100%;
   background: rgba(0, 0, 0, 0.85);
   z-index: 101;
+  display: none;
 }
 .modal {
   background-color: #138dcc;
   position: fixed;
   top: 20px;
   z-index: 102;
+  display: none;
 }
 .get-price {
   padding: 40px 30px 5px 30px;
@@ -891,10 +898,12 @@ a {
 }
 .get-price .main-form .input-block {
   margin-bottom: 10px;
+  position: relative;
 }
 .get-price .main-form .input-block p {
   font-size: 14px;
   font-family: 'OpenSans-Regular';
+  float: left;
 }
 .get-price .main-form .input-block input[type="text"] {
   width: 100%;
@@ -904,7 +913,7 @@ a {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  font-size: 24px;
+  font-size: 28px;
   font-family: 'OpenSans-Semibold';
   text-align: center;
   margin-top: 5px;
@@ -942,12 +951,12 @@ a {
   cursor: pointer;
 }
 .get-call {
-  padding: 40px 30px 30px 30px;
+  padding: 40px 30px 15px 30px;
   width: 850px;
   left: 50%;
   margin-left: -425px;
   top: 50%;
-  margin-top: -262.5px;
+  margin-top: -260px;
 }
 .get-call .right-block {
   float: right;
@@ -990,14 +999,16 @@ a {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  font-size: 24px;
+  font-size: 30px;
   font-family: 'OpenSans-Semibold';
   text-align: center;
   margin-top: 5px;
+  color: #181818;
 }
 .get-call .main-form p {
   font-size: 14px;
   font-family: 'OpenSans-Regular';
+  float: left;
 }
 .get-call .main-form .link-btn {
   outline: 0;
@@ -1024,21 +1035,70 @@ a {
 }
 .get-call .main-form .input-block {
   margin-bottom: 15px;
+  position: relative;
 }
-.get-call .main-form .tel-block input:nth-child(2) {
+.get-call .main-form .tel-block .in-1 {
   width: 80px;
   float: left;
 }
-.get-call .main-form .tel-block input:nth-child(3) {
+.get-call .main-form .tel-block .in-2 {
   width: 125px;
   float: left;
   margin-left: 5px;
 }
-.get-call .main-form .tel-block input:nth-child(4) {
+.get-call .main-form .tel-block .in-3 {
   width: 185px;
   float: left;
   margin-left: 5px;
 }
 .get-call .main-form .tel-block {
   margin-bottom: 25px;
+}
+.get-price-link {
+  cursor: pointer;
+}
+span.error {
+  font-family: 'OpenSans-Regular';
+  color: red;
+  float: right;
+}
+input.error,
+textarea.error {
+  border: 1px solid red !important;
+}
+.get-call .main-form input[type="text"]::-webkit-input-placeholder {
+  color: #dfdfdf;
+}
+.get-call .main-form input[type="text"]::-moz-placeholder {
+  color: #dfdfdf;
+}
+.get-call .main-form input[type="text"]:-moz-placeholder {
+  color: #dfdfdf;
+}
+.get-call .main-form input[type="text"]:-ms-input-placeholder {
+  color: #dfdfdf;
+}
+.get-price .main-form .input-block input[type="text"]::-webkit-input-placeholder {
+  color: #dfdfdf;
+}
+.get-price .main-form .input-block input[type="text"]::-moz-placeholder {
+  color: #dfdfdf;
+}
+.get-price .main-form .input-block input[type="text"]:-moz-placeholder {
+  color: #dfdfdf;
+}
+.get-price .main-form .input-block input[type="text"]:-ms-input-placeholder {
+  color: #dfdfdf;
+}
+.order .right-block .input-block input[type="text"]::-webkit-input-placeholder {
+  color: #dfdfdf;
+}
+.order .right-block .input-block input[type="text"]::-moz-placeholder {
+  color: #dfdfdf;
+}
+.order .right-block .input-block input[type="text"]:-moz-placeholder {
+  color: #dfdfdf;
+}
+.order .right-block .input-block input[type="text"]:-ms-input-placeholder {
+  color: #dfdfdf;
 }
