--- a/css/main.css
+++ b/css/main.css
@@ -774,9 +774,10 @@ a {
 }
 .maps-block .maps-title {
   position: absolute;
-  width: 100%;
+  width: 980px;
   top: 50px;
-  left: 0;
+  left: 50%;
+  margin-left: -490px;
   z-index: 10;
   text-align: center;
   font-size: 48px;
@@ -1061,6 +1062,7 @@ span.error {
   font-family: 'OpenSans-Regular';
   color: red;
   float: right;
+  display: none;
 }
 input.error,
 textarea.error {
