--- a/css/main.less
+++ b/css/main.less
@@ -836,9 +836,10 @@ a{
 
 		.maps-title{
 			position: absolute;
-			width: 100%;
+			width: 980px;
 			top: 50px;
-			left: 0;
+			left: 50%;
+			margin-left: -490px;
 			z-index: 10;
 			text-align: center;
 			font-size: 48px;
@@ -1136,6 +1137,7 @@ span.error{
 	font-family: 'OpenSans-Regular';
 	color: red;
 	float: right;
+	display: none;
 }
 input.error, textarea.error {
   border: 1px solid red !important;
