--- a/css/main.css
+++ b/css/main.css
@@ -534,7 +534,7 @@ a {
 }
 .how_we_work .work-block:first-child .work-table {
   background-color: #fef507;
-  border: 4px solid black;
+  border: 7px solid black;
 }
 .how_we_work .work-block:first-child:after,
 .how_we_work .work-block:nth-child(2):after,
@@ -542,30 +542,33 @@ a {
   content: "";
   display: block;
   width: 69px;
-  height: 21px;
+  height: 235px;
   background: url(../images/arrow-right.png) no-repeat;
+  background-position: 0 75px;
   position: absolute;
   right: -70px;
-  top: 70px;
+  top: 0;
 }
 .how_we_work .work-block:nth-child(6):after,
 .how_we_work .work-block:nth-child(7):after {
   content: "";
   display: block;
   width: 69px;
-  height: 21px;
+  height: 220px;
   background: url(../images/arrow-left.png) no-repeat;
+  background-position: 0 75px;
   position: absolute;
   right: -70px;
-  top: 70px;
+  top: 0;
 }
 .how_we_work .work-block:nth-child(4):after {
   content: "";
   display: block;
   position: absolute;
-  width: 191px;
+  width: 215px;
   height: 298px;
   background: url(../images/arrow-bot.png) no-repeat;
+  background-position: 18px;
   right: -80px;
   top: 80px;
 }
@@ -587,7 +590,7 @@ a {
 }
 .how_we_work .work-table.active {
   background-color: #fef507;
-  border: 4px solid black;
+  border: 7px solid black;
 }
 .how_we_work .work-title {
   text-align: center;
@@ -755,6 +758,9 @@ a {
   font-family: 'OpenSans-Regular';
   line-height: 26px;
 }
+.warranty .war-desc span {
+  font-family: 'OpenSans-Bold';
+}
 .warranty .war-desc .link-btn {
   width: 330px;
   height: 60px;
@@ -766,6 +772,7 @@ a {
   border-bottom: 4px solid #afa904;
   padding-top: 16px;
   margin-top: 30px;
+  cursor: pointer;
 }
 .maps-block {
   width: 100%;
@@ -858,6 +865,7 @@ a {
   top: 20px;
   z-index: 102;
   display: none;
+  border: 4px solid #222222;
 }
 .get-price {
   padding: 40px 30px 5px 30px;
@@ -872,9 +880,9 @@ a {
   float: right;
   width: 455px;
   background-color: white;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
   padding-top: 20px;
 }
 .get-price .left-block {
@@ -942,6 +950,89 @@ a {
   background: url(../images/lock.png) no-repeat;
   background-position: 15px 0;
 }
+.show-more {
+  padding: 40px 30px 5px 30px;
+  width: 850px;
+  left: 50%;
+  margin-left: -425px;
+  top: 50%;
+  margin-top: -262.5px;
+  display: none;
+}
+.show-more .right-block {
+  float: right;
+  width: 455px;
+  background-color: white;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  padding-top: 20px;
+}
+.show-more .left-block {
+  float: left;
+}
+.show-more .pen {
+  width: 272px;
+  height: 480px;
+  background: url(../images/pen.png);
+}
+.show-more .main-form {
+  width: 400px;
+  margin: auto;
+}
+.show-more .main-form h3 {
+  text-align: center;
+  text-transform: uppercase;
+  color: black;
+  font-size: 24px;
+  font-family: 'OpenSans-Regular';
+  margin-bottom: 20px;
+}
+.show-more .main-form .input-block {
+  margin-bottom: 10px;
+  position: relative;
+}
+.show-more .main-form .input-block p {
+  font-size: 14px;
+  font-family: 'OpenSans-Regular';
+  float: left;
+}
+.show-more .main-form .input-block input[type="text"] {
+  width: 100%;
+  height: 40px;
+  outline: 0;
+  border: 1px solid #bebebe;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  font-size: 28px;
+  font-family: 'OpenSans-Semibold';
+  text-align: center;
+  margin-top: 5px;
+}
+.show-more .main-form .input-block .link-btn {
+  outline: 0;
+  border: 0;
+  border-bottom: 4px solid #afa904;
+  width: 100%;
+  height: 62px;
+  cursor: pointer;
+  font-size: 24px;
+  -webki-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  margin-top: 15px;
+}
+.show-more .main-form .privacy {
+  color: #757575;
+  font-size: 12px;
+  font-family: 'OpenSans-Regular';
+  padding-left: 40px;
+  padding-top: 5px;
+  padding-bottom: 15px;
+  background: url(../images/lock.png) no-repeat;
+  background-position: 15px 0;
+}
 .closed {
   position: absolute;
   width: 18px;
@@ -963,9 +1054,9 @@ a {
   float: right;
   width: 455px;
   background-color: white;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
   padding-top: 20px;
 }
 .get-call .left-block {
@@ -1092,6 +1183,18 @@ textarea.error {
 .get-price .main-form .input-block input[type="text"]:-ms-input-placeholder {
   color: #dfdfdf;
 }
+.show-more .main-form .input-block input[type="text"]::-webkit-input-placeholder {
+  color: #dfdfdf;
+}
+.show-more .main-form .input-block input[type="text"]::-moz-placeholder {
+  color: #dfdfdf;
+}
+.show-more .main-form .input-block input[type="text"]:-moz-placeholder {
+  color: #dfdfdf;
+}
+.show-more .main-form .input-block input[type="text"]:-ms-input-placeholder {
+  color: #dfdfdf;
+}
 .order .right-block .input-block input[type="text"]::-webkit-input-placeholder {
   color: #dfdfdf;
 }
@@ -1103,4 +1206,18 @@ textarea.error {
 }
 .order .right-block .input-block input[type="text"]:-ms-input-placeholder {
   color: #dfdfdf;
+}
+.finish-sms {
+  width: 600px;
+  height: 300px;
+  left: 50%;
+  top: 50%;
+  margin-left: -300px;
+  margin-top: -150px;
+  text-align: center;
+  font-family: 'OpenSans-Regular';
+  font-size: 36px;
+  line-height: 40px;
+  padding-top: 90px;
+  color: white;
 }
